changed photo and corrected h1 i nav

--- a/modern/style.css
+++ b/modern/style.css
@@ -51,9 +51,10 @@ body {
 }
 
 .nav a {
-  font-family: "general Sans Medium";
+  font-family: "general Sans";
   text-decoration: none;
   font-size: 18px;
+  font-weight: 600;
   color: #fff;
 }
 
